# Serial-Design-V

./: .gitignore  README.md  SCRIPT_STRUCTURE.md  clean_keybinds_viewer.sh  install.sh  package-list.txt
.config/Kvantum/: kvantum.kvconfig
.config/fish/: README.md  STRUCTURE.md  config.fish  config.fish.original  fish_variables  test_control_complete.fish
.config/foot/: README.md  colors.ini  foot.ini
.config/gtk-3.0/: bookmarks  settings.ini  settings.ini.bak
.config/gtk-4.0/: gtk-dark.css  gtk.css  settings.ini  theme-info.json
.config/hypr/: .temp_performance_conf  hypridle.conf  hyprland.conf  hyprland.conf.backup  hyprlock.conf  hyprpaper.conf  last_wallpaper  test_clock_position.sh
.config/kitty/: README.md  kitty.conf  kitty.conf.original  shortcuts.md  themes.conf
.config/qt5ct/: qt5ct.conf  style-colors.conf
.config/qt6ct/: qt6ct.conf  style-colors.conf
.config/rofi/: animated.rasi  animated_test.rasi  colors.rasi  config.rasi  example.rasi  facts.rasi  launchpad.rasi  logout.rasi  test.rasi  theme.rasi
.config/swaync/: config.json  style.css  style.css.before_ultimate_fix
.config/waybar/: bar.css  bar.jsonc  config-debug.css  config-debug.jsonc  config.jsonc  media-style.css  performance-mode.jsonc  performance-style.css  start-media-waybar.sh  stop-media-waybar.sh  style.css
.config/wofi/: config  style.css
gtk-theme/serial-design-V/: index.theme
gtk-theme/serial-design-V-dark/: index.theme
hypr-graphite/hypr-graphite-hyprland/: PKGBUILD
hypr-graphite/hypr-graphite-launchers/: PKGBUILD
hypr-graphite/hypr-graphite-notifications/: PKGBUILD
hyprland_var_viewer/: Cargo.toml
hyprland_var_viewer/src/: main.rs
main_center/: Cargo.toml
main_center/assets/: media_player.css  style.css
main_center/src/: cpu_t-application.c  main.rs  system-info.c
main_center/src/hyprland/: mod.rs
main_center/src/ui/: app_drawer.rs  app_window.rs  async_utils.rs  custom_button.rs  mod.rs  mpris_controller.rs  sidebar.rs  system_info.rs  system_updater.rs
main_center/src/ui/tabs/: clock_config_tab.rs  cool_facts_tab.rs  dashboard_tab.rs  default_apps_tab.rs  mod.rs  sound_packs_tab.rs  system_update_tab.rs  tabs_core.rs  troubleshoot_tab.rs  ui_utils.rs  volume_tab.rs  wallpaper_tab.rs
scripts/: arch_install.sh  colors.sh  common_functions.sh  configure-file-manager.sh  copy-configs.sh  debian_install.sh  detect-aur-helper.sh  fedora_install.sh  install-chaotic-aur.sh  install-cursors.sh  install-custom-packages.sh  install-evolve-core.sh  install-flatpak.sh  install-gtk-theme.sh  install-icon-theme.sh  install-qt-theme.sh  install-swayosd.sh  install_keybinds_viewer.sh  install_main_center.sh  install_var_viewer.sh  manage-config.sh  set-to-default-gtk.sh  setup-themes.sh
show_keybinds/: Cargo.toml  INSTALLATION.md  README.md
(+290 files in other folders)
