[package]
name = "hyprland-settings"
version = "0.1.0"
edition = "2021"
description = "A GTK4 application to view and edit Hyprland settings and configurations"
keywords = ["hyprland", "gtk4", "configuration", "wayland"]
categories = ["gui"]

[dependencies]
gtk4 = { version = "0.6.6", features = ["v4_8"] }
glib = "0.17.10"
regex = "1.10.3"
walkdir = "2.4.0"
