[package]
name = "main_center"
version = "0.1.0"
edition = "2021"
description = "A GTK4 main center application with sidebar notifications and vertical tabs"
# This application is configured to always use Wayland and disable X11 when running under XWayland

[dependencies]
gtk = { version = "0.6.6", package = "gtk4", features = ["v4_8"] }
libadwaita = "0.3.1"
glib = "0.17.9"
gio = { version = "0.17" }
once_cell = "1.17"
chrono = "0.4.19"
zbus = "3.13.1"
futures-lite = "1.13.0"
inotify = "0.10"
dirs = "5.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.8.2"
signal-hook = "0.3.14"
log = "0.4"
